# GCDC

./: .env.example  .gitignore  Makefile  QUICKSTART.txt  README.md  grandchaseproject.md  parse_test.py  parse_test2.py  parse_test3.py  parse_test4.py  parse_test5.py  pyproject.toml  streamlit_app.py
.github/: copilot-instructions.md
.github/workflows/: pages.yml
config/: config.json  hero_aliases.json
data/processed/: hero_leaderboard.csv  hero_leaderboard_from_notebook.csv  mode_breakdown_from_notebook.csv  top_heroes_from_notebook.csv  variant_leaderboard.csv
data/raw/gcdc_meta_spreadsheet/: aernasis_hammer.csv  altar_of_time.csv  assembly.csv  beginner_s_guide.csv  beginners_guide.csv  beginners_guide_v4.csv  berkas_lair.csv  builds.csv  changelog.csv  community_keys.csv  content_keys.csv  content_usage_wip.csv  div.csv  (+22 more)
docs/: app.css  app.js  index.html
notebooks/: analysis.ipynb
scripts/: 01_scrape_strategywiki.py  02_scrape_namuwiki.py  03_scrape_fandom.py  04_normalize_and_build_db.py  05_tag_skills_with_llm.py  bootstrap.sh  download_meta_sheets.py  export_spreadsheet_csvs.py  run_explorer.sh  run_pipeline.sh  verify_setup.sh
src/grandchase_meta_analyzer/: __init__.py  cli.py  explorer.py  explorer_app.py  explorer_skill_details.py  ingest_spreadsheet.py  llm.py  normalize.py  pages.py  paths.py  pipeline.py  settings.py  storage.py  team_analysis.py
tests/: test_cli.py  test_explorer.py  test_explorer_skill_details.py  test_namuwiki.py  test_normalize.py  test_pages.py  test_scraper_common.py  test_strategywiki.py  test_team_analysis.py
(+5 files in other folders)
