[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grandchase-meta-analyzer"
version = "0.1.0"
description = "Offline GrandChase hero meta scraping, normalization, scoring, and analysis toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "jupyter>=1.1,<2",
  "lxml>=5,<6",
  "matplotlib>=3.9,<4",
  "pandas>=2.2,<3",
  "python-dotenv>=1.0,<2",
  "requests>=2.32,<3",
  "seaborn>=0.13,<1",
  "streamlit>=1.44,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "ruff>=0.11,<0.12"]

[project.scripts]
gcdc = "grandchase_meta_analyzer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
where = ["src"]
